frontend/test/typecheck/success/multiple-returns.fc
int foo() {
    return 1;
    return 2;
}
