frontend/test/typecheck/error/return-too-early.fc
int foo() {
    return 1;
    int i = 1;
}
